--- a/Study-AI/01_start_test/start_test.ipynb
+++ b/Study-AI/01_start_test/start_test.ipynb
@@ -353,7 +353,25 @@
    "metadata": {}
   },
   {
-   "source": [],
+   "source": [
+    "\\begin{eqnarray*}\n",
+    "袋がAである確率 : P(A) = \\frac{1}{3} \\\\\n",
+    "赤玉である確率　：P(B)  = \\frac{1}{2} \\\\\n",
+    "袋がAで赤玉である確率 :n(A \\cap B) = \\frac{5}{18}\n",
+    "\\end{eqnarray*}\n",
+    "公式  \n",
+    "事象Bが起こるという条件のもとで事象Aが起こる場合の条件付き確率は次の公式\n",
+    "\\begin{eqnarray*}\n",
+    "    n(A \\backslash B) = \\frac{n(A \\cap B)}{n(B)}\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "計算\n",
+    "\\begin{eqnarray*}\n",
+    "    n(A \\backslash B) &=& \\frac{n(A \\cap B)}{n(B)} \\\\\n",
+    "    &=& \\frac{5}{18} * 2 \\\\\n",
+    "    &=& \\frac{5}{9}\n",
+    "\\end{eqnarray*}"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
@@ -371,18 +389,22 @@
   },
   {
    "source": [
-    "- トランプを２回引いた場合の組み合わせ  \n",
-    "$52 * 51 = 2652$\n",
-    "\n",
-    "- ハートが２枚続く組み合わせ\n",
-    "$13 * 12 = 156$\n",
-    "\n",
-    "- 最終的な計算（６で割る、２で割る、７で割る）\n",
+    "- １回目がハートの確率\n",
     "\\begin{eqnarray*}\n",
-    "156 / 2652 &=& 26 / 442 \\\\ \n",
-    "&=& 13 / 221 \\\\\n",
-    "&=& 1 / 17 \\\\\n",
-    "\\end{eqnarray*}"
+    "    \\frac{13}{52}\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "- ２回目がハートの確率\n",
+    "\\begin{eqnarray*}\n",
+    "    \\frac{12}{51}\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "- 最終的な計算\n",
+    "\\begin{eqnarray*}\n",
+    "    \\frac{13}{52} * \\frac{12}{51} &=& \\frac{1 * 12}{4 * 51} \\\\[3mm]\n",
+    "    &=&  \\frac{3}{51} \\\\[3mm]\n",
+    "    &=&  \\frac{1}{17}\n",
+    "\\end{eqnarray*}\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -397,9 +419,22 @@
   {
    "source": [
     "\\begin{eqnarray*}\n",
-    "    n(A) &=& \\frac{1}{4} \\\\\n",
-    "    n(B) &=& \\frac{3}{5} \\\\\n",
-    "    n(A \\cap B) &=& \\frac{1}{5}\n",
+    "    n(A) &=& \\frac{1}{4} \\qquad n(\\overline{A}) &=& \\frac{3}{4} \\\\[3mm]\n",
+    "    n(B) &=& \\frac{3}{5} \\qquad n(\\overline{B}) &=& \\frac{2}{5} \\\\[3mm]\n",
+    "    n(A \\cap B) &=& \\frac{1}{5} \\\\[3mm]\n",
+    "    n(A \\cap \\overline{B}) &=& n(A) - n(A \\cap B) \\\\[3mm]\n",
+    "    &=& \\frac{1}{4} - \\frac{1}{5} \\\\[3mm]\n",
+    "    &=& \\frac{1}{20} \\\\[3mm]\n",
+    "    n(B \\cap \\overline{A}) &=& n(B) - n(A \\cap B) \\\\[3mm]\n",
+    "    &=& \\frac{3}{5} - \\frac{1}{5} \\\\[3mm]\n",
+    "    &=& \\frac{2}{5}\n",
+    "\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "公式  \n",
+    "事象Bが起こるという条件のもとで事象Aが起こる場合の条件付き確率は次の公式\n",
+    "\\begin{eqnarray*}\n",
+    "    n(A \\backslash B) = \\frac{n(A \\cap B)}{n(B)}\n",
     "\\end{eqnarray*}"
    ],
    "cell_type": "markdown",
@@ -407,26 +442,83 @@
   },
   {
    "source": [
+    "## ①\n",
     "\\begin{eqnarray*}\n",
-    "    n(B \\backslash A) &=& n(B) - n(A \\cap B) \\\\\n",
-    "    &=& 35 - 6 \\\\\n",
-    "    &=& 29 \\\\\n",
-    "    \\\\\n",
-    "    n(A \\backslash \\overline{B}) &=& n(A) - n(A \\cap B) \\\\\n",
-    "    &=& 43 - 6 \\\\\n",
-    "    &=& 37 \\\\\n",
-    "    \\\\\n",
-    "    n(\\overline{A} \\backslash \\overline{B}) &=& n(U) - n(A) - n(B) + n(A \\cap B) \\\\\n",
-    "    &=& 100 - 43 - 35 + 6 \\\\\n",
-    "    &=& 28 \\\\\n",
-    "    \\\\\n",
-    "    n(\\overline{A} \\backslash \\overline{B}) &=& n(U) - n(A) - n(B) + n(A \\cap B) \\\\\n",
-    "    &=& 100 - 43 - 35 + 6 \\\\\n",
-    "    &=& 28\n",
+    "    n(A \\backslash B) &=& \\frac{n(A \\cap B)}{n(B)} \\qquad  n(B \\backslash A) &=& \\frac{n(A \\cap B)}{n(A)} \\\\[3mm]\n",
+    "    &=& \\frac{1}{5} * \\frac{5}{3} &=& \\frac{1}{5} * 4 \\\\[3mm]\n",
+    "    &=& \\frac{1}{3} &=& \\frac{4}{5} \\\\\n",
     "\\end{eqnarray*}"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## ②\n",
+    "\\begin{eqnarray*}\n",
+    "    n(B \\backslash \\overline{A}) &=& \\frac{n(B \\cap \\overline{A})}{n(\\overline{A})} \\qquad n(A \\backslash \\overline{B}) &=& \\frac{n(A \\cap \\overline{B})}{n(\\overline{B})} \\\\[3mm]\n",
+    "    &=& \\frac{2}{5} * \\frac{4}{3} &=& \\frac{1}{20} * \\frac{5}{2} \\\\[3mm]\n",
+    "     &=&  \\frac{8}{15} &=&  \\frac{1}{8} \\\\\n",
+    "\\end{eqnarray*}"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# 15"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "\\begin{eqnarray}\n",
+    "\\lim_{x \\to 1 + 0} \\frac{x^2-2}{x^3+2x-3}\n",
+    "\\end{eqnarray}"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "\\begin{eqnarray}\n",
+    "& \\lim_{x \\to 1 + 0}\n",
+    "\\end{eqnarray}\n",
+    "とあるため、xに1を代入して考える。\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "\\lim_{x \\to 1 + 0} \\frac{x^2-2}{x^3-2x-3} &=& \\frac{1^2-2}{1^3+2*1-3} \\\\\n",
+    "&=& \\frac{1-2}{1+2-3} \\\\\n",
+    "&=& \\frac{-1}{0} \\\\\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "分母が０のため、$\\infty$か$-\\infty$のいずかれになる。  \n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "& \\lim_{x \\to 1 + 0}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "の＋０とあるため、プラス方向から１に近づくため、代入する値は１以上である。  \n",
+    "→分母は厳密には１より大きいため、分母も０より大きい  \n",
+    "　分子がマイナスなので、答えは$-\\infty$になる。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
