スタートテスト

--- a/Study-AI/01_start_test/start_test.ipynb
+++ b/Study-AI/01_start_test/start_test.ipynb
@@ -595,16 +595,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "72c9f40c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[22]\n",
-      " [35]]\n"
+      "[[22]\n [35]]\n"
      ]
     }
    ],
@@ -5643,12 +5642,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6794a5f773969a502a6a0978f7910d17b3990f82da61ba87afc2b8ced71d7da6"
+   "hash": "97d3723faa4999a5fbc2f5ff613a8146b45a4dc56859e084e7329fed153e30f7"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('ml': conda)"
   },
   "language_info": {
    "codemirror_mode": {
