--- a/OreillyDeepLearning/meeting/LaTex.ipynb
+++ b/OreillyDeepLearning/meeting/LaTex.ipynb
@@ -123,9 +123,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5640756d",
+   "metadata": {},
+   "source": [
+    "①と②の結果から、評価関数を変換する。 \\\n",
+    "（最終的に微分した結果が０となる重みを求めるため、微分を行いやすい形にする）\n",
+    "\n",
+    "①の結果から、$\\hat{y}=\\vec{x}^T\\vec{w}$ の中から、$\\hat{\\vec{y}}$を変換する。\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "  \\hat{\\vec{y}}&=\n",
+    "  \\left(\n",
+    "    \\begin{array}{c}\n",
+    "      \\hat{y_1} \\\\\n",
+    "      \\hat{y_2} \\\\\n",
+    "      \\vdots \\\\\n",
+    "      \\hat{y_N}\n",
+    "    \\end{array}\n",
+    "  \\right) \n",
+    "  =\n",
+    "  \\left(\n",
+    "    \\begin{array}{c}\n",
+    "      \\vec{x_1}^T\\vec{w} \\\\\n",
+    "      \\vec{x_2}^T\\vec{w} \\\\\n",
+    "      \\vdots \\\\\n",
+    "      \\vec{x_N}^T\\vec{w}\n",
+    "    \\end{array}\n",
+    "  \\right) \n",
+    "  =\n",
+    "  \\left(\n",
+    "    \\begin{array}{c}\n",
+    "      \\vec{x_1}^T \\\\\n",
+    "      \\vec{x_2}^T \\\\\n",
+    "      \\vdots \\\\\n",
+    "      \\vec{x_N}^T\n",
+    "    \\end{array}\n",
+    "  \\right) \\vec{w}\\\\\n",
+    "  &=\n",
+    "  \\left(\n",
+    "    \\begin{array}{c}\n",
+    "      x_{10} & x_{11} & x_{12} & \\ldots & x_{1M} \\\\\n",
+    "      x_{20} & x_{21} & x_{22} & \\ldots & x_{2M} \\\\\n",
+    "      \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "      x_{N0} & x_{N1} & x_{N2} & \\ldots & x_{NM} \n",
+    "    \\end{array}\n",
+    "  \\right) \\vec{w}\\\\ \n",
+    "   &=X \\vec{w}\\\\ \n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "②の結果から、$L=(\\vec{y} -\\vec{\\hat{y}})^T (\\vec{y} -\\vec{\\hat{y}})$ なので、評価関数を展開すると、\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "  L &=(\\vec{y} - \\vec{\\hat{y}})^T (\\vec{y} - \\vec{\\hat{y}}) \\\\\n",
+    "  &=(\\vec{y} - X \\vec{w})^T (\\vec{y} - X \\vec{w}) \\\\\n",
+    "  &=(\\vec{y}^T - (X \\vec{w})^T) (\\vec{y} - X \\vec{w}) \\\\\n",
+    "  &=(\\vec{y}^T - \\vec{w}^TX^T) (\\vec{y} - X \\vec{w}) \\\\\n",
+    "  &=\\vec{y}^T\\vec{y} - \\vec{y}^TX \\vec{w} - \\vec{w}^TX^T \\vec{y} + \\vec{w}^TX^TX \\vec{w}\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "$ (\\vec{y}^TX \\vec{w})^T = \\vec{y}^TX \\vec{w} $  はスカラー（公式（３）から）なので、成り立つ \n",
+    "\n",
+    "$ (\\vec{y}^TX \\vec{w})^T = \\vec{w}^T X^T \\vec{y} $ 転置の法則（公式（５）から）より、左記が成り立つ \n",
+    "\n",
+    "つまり、$ \\vec{y}^TX \\vec{w} =\\vec{w}^T X^T \\vec{y} $ が成り立つため、上の式の \n",
+    "\n",
+    "$- \\vec{y}^TX \\vec{w} - \\vec{w}^TX^T \\vec{y} = - 2\\vec{y}^TX \\vec{w}$ とすることができる。\n",
+    "\n",
+    "$$ L =\\vec{y}^T\\vec{y} - 2\\vec{y}^TX \\vec{w} + \\vec{w}^TX^TX \\vec{w} $$\n",
+    "\n",
+    "\n",
+    "$\\vec{y}^T\\vec{y}$ はスカラーなので、$C=\\vec{y}^T\\vec{y}$ とする。 \n",
+    "\n",
+    "$-2\\vec{y}^TX$ はベクトル（公式（２）から）により、$\\vec{b}=-2(X^T\\vec{y})^T$ とする。 \n",
+    "\n",
+    "かつ転置の法則（公式（５）から）から、$\\vec{b}^T=-2\\vec{y}^TX$ とする。 \n",
+    "\n",
+    "$X^TX$ は行列なので、$A=X^TX$ とする。\n",
+    "\n",
+    "\n",
+    "$$ L = C + \\vec{b}^T \\vec{w} + \\vec{w}^TA \\vec{w} $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39948862",
+   "id": "e3762f6e",
    "metadata": {},
    "outputs": [],
    "source": []
